2008-01-10  lav

	* options.cc: allow tab size up to 99.
	* kern.cc: nicer PrevLine.
	* about.cc: update copyright.
	* menu1.cc: fix off-by-one.

2007-09-06  lav

	* calc.cc: recognize .123 as a number.
	* about.cc: update copyright year.

2007-08-08  lav

	* search.cc: do not match empty string.

2007-08-02  lav

	* highli.cc: match basename.

2006-11-29  lav

	* user.cc: do autoindent only when there is no input pending (no paste).
	* screen.cc: better aggregate paste operations; do StatusLine in SyncTextWin;
	  show rotating stick when pasting.
	* edit.cc, format.cc, frames.cc, options.cc, search.cc: separate StatusLine
	  call is not needed anymore.
	* highli.cc: fixed syntax signature recognition.

2006-06-20  lav

	* textpoin.cc: use NextLine for faster search.
	* kern.cc: optimize NextLine with memchr.

2006-06-14  lav

	* keymapdf.cc: add putty codes.
	* user.cc: support comment-line for java and sql.

2006-05-15  lav

	* history.cc, history.h: add clone ctor - this fixes a coredump
	  in History::Push.

2006-04-24  lav

	* history.cc: null-terminate read history lines.

2006-04-21  lav

	* history.cc: don't print error when history file is empty.

2006-04-20  lav

	* calc.cc, calc.h, editcalc.cc: add support for hex, oct, ins, more functions.
	* getstr.cc: move ModifyKey to tables.cc.
	* le.hlp: update calc help.
	* tables.cc: add wc table, move ModifyKey here.
	* edit.cc, edit.h: rename InitTables, move init_chset outside; save new format
	  history to history2 file.
	* edit.h, options.cc, search.cc, le.hlp: add 'match case' option.

2006-04-19  lav

	* calc.cc, calc.h, file.cc, file.h, getstr.cc, kern.cc, keymap.cc,
	  keymap.h, keymapdf.cc, keynames.cc, loadsave.cc, menu.cc, menu.h,
	  options.cc, options.h, textpoin.h, window.cc, window.h:
	  add proper const's.
	* edit.cc, user.cc: new history format.
	* edit.h, tables.cc: move InitTables and ModifyKey into ifdef; consts.
	* history.cc, history.h: new history file format; dynamic memory allocation.
